--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Yatri,s Booking Form</title>
+<title>Yatri's Booking Form</title>
 
 <style>
 body{
@@ -86,7 +86,7 @@ margin-top:12px;
 
 <div class="container">
 
-<h1>Yatri,s Information</h1>
+<h1>Yatri's Information</h1>
 <h2>Select Events</h2>
 
 <!-- TOP ICONS WITH TICK -->
@@ -224,6 +224,7 @@ form.reset();
 
 </body>
 </html>
+
 
 
 
